Closed Bug 209878 Opened 23 years ago Closed 23 years ago

[trunk] Character coding menu corruption

Categories

(Core :: Internationalization, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: smontagu, Assigned: smontagu)

Details

Attachments

(1 file)

Steps to reproduce: Click View | Character Coding | More Expected results: after the area submenus, see UTF-8, UTF-7 and User Defined Actual results: see a huge list of encodings.
really? I thought you were supposed to see the big list? I thought I had gotten it right some time back. I understand nsCharsetMenu a lot better now though, so ping me if you need any help. where are all those encodings supposed to appear then?
I don't see the big list in 2003060608, which is the last nightly I could find before the checkin from bug 206379. I found something which looks wrong at http://lxr.mozilla.org/mozilla/source/xpfe/components/intl/nsCharsetMenu.cpp#1050 nsCStringArray othersEncoderList; CloneCStringArray(mDecoderList, othersDecoderList); // ^^ shouldn't this be othersEncoderList? res = InitMoreMenu(othersEncoderList, kNC_EncodersRoot, ".notForOutgoing"); but changing it doesn't fix the bug.
Summary: Character coding menu corruption → [trunk] Character coding menu corruption
Attached patch PatchSplinter Review
I left in the change I suggested in the last comment, but the real fix is the second chunk, changing IndexOf() to IndexOfIgnoreCase().
Attachment #126060 - Flags: superreview?(alecf)
Attachment #126060 - Flags: review?(alecf)
Comment on attachment 126060 [details] [diff] [review] Patch r/sr=alecf
Attachment #126060 - Flags: superreview?(alecf)
Attachment #126060 - Flags: superreview+
Attachment #126060 - Flags: review?(alecf)
Attachment #126060 - Flags: review+
Fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Simon, thanks for fixing 'decoder->encoder' typo. I remember spotting it while reviewing Alec's patch for bug 206379, but apparently I forgot to mention it in my comment to that bug.
Verified fixed in 06-23 trunk build.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: