Fix regression in Character Coding menu. Bug 209878, r/sr=alecf